<resources>
    <string name="app_name">ShutterUp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_feed">Feed</string>
    <string name="title_category">Category</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login & Registration -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_retype">Re-Enter Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="prompt_dob">Date Of Birth</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_registration">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove, change or add another notification channel-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity_main2">Daily Feed</string>

    <string name="hello_world">Hello world!</string>
</resources>
